--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-export default {
-USER_ID: `user_twJMhT1XLr7XXXXXXXXXX`, //userID
-TEMPLATE_ID: `hexpower_temp`,         //templateID
-}
+REACT_APP_SERVICE_ID = 'service_tx8u6sq'
+REACT_APP_TEMPLATE_ID = 'template_anc1pt1'
+REACT_APP_API_KEY = 'FeH2En96BoO-skgph'
