--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "next-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://profile.github.io",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,6 +11,7 @@
   },
   "dependencies": {
     "emailjs-com": "^3.2.0",
+    "gh-pages": "^4.0.0",
     "joi": "^17.6.0",
     "next": "12.1.6",
     "react": "18.1.0",
